extractor/tests/snapshots/test_inputs__failing__function_no_within.lua-stderr.snap
---
source: tests/test-inputs.rs
expression: stderr
---
error: Must specify containing class with @within tag
  ┌─ test-input/failing/function_no_within.lua:2:5
  │
2 │     @function TheFunction
  │     ^^^^^^^^^^^^^^^^^^^^^ Must specify containing class with @within tag

error: aborting due to diagnostic error

